# wild_code

./: .gitignore  Copie de Date and Time with Python and Pandas.ipynb  PEP 8 – Écrire du code beau et lisible en Python  README.md  atelier_evalue.ipynb  correction_dojo.ipynb
.devcontainer/: devcontainer.json
DBT_DEMO/: conectMySQL.py
ML_avancée/: 4.3 Pipeline ML - Recherche par grille et recherche aléatoire.ipynb  Copie de Grid-Search-ARIMA-Models.ipynb  Copie de Intro_ARIMA.ipynb  Copie de Standardize your data.ipynb  Cross_validation.ipynb  PCA.ipynb  atelier_evalue.ipynb  detection_anomalies.ipynb
Product manager/: Créer des diagrammes de Gantt et PERT.docx  Créer un backlog produit.docx  Project specifications for.docx  Projet _ Outil d’analyse de sentiment.docx
Programmation orientée objet/: AVE solene Degrutere.ipynb  POO1.ipynb  Tamagotchi1.ipynb
SQL/: Document sans titre.docx
cookiecutter/: cookiecutter.json
deep learning/: Building_Perceptrons_with_Scikit_Learn.ipynb  Building_a_VGG16_CNN_network.ipynb  Copie_de_Loss_Functions.ipynb  Quest_CNN_Classification.ipynb  Quest_ImageAI.ipynb  Quest_NN_1.ipynb  RLipynb.ipynb  ROC-AUC Challenge.ipynb  beginner.ipynb  pyproject.toml
deep_learning/: .gitignore  classification_ham_spam.ipynb
flask_model_api/: app.py  model.pkl  pyproject.toml  requirements.txt
langchain/: Construire_Gérer_Chaînes Avancées_LangChain.ipynb  Intégration_Développement_LangChain et Streamlit.ipynb  Maîtrise_Templates_Parsers _Chains_LangChain.ipynb  Techniques_Outils_Traitement_Données_LangChain.ipynb  app.py  axo.py  exo1_langchain.ipynb  main.py  pyproject.toml
langchain/Dojo_W10/: .env  pyproject.toml
langchain/Dojo_W10/src/: app.py  main.py  test_embedding.py  test_retriever.py
langchain/chroma_db/: chroma.sqlite3
machine_learning/: Copie de  1.3 ML - Train test split.ipynb  Copie de Copie de Quête Introduction au Machine Learning - Régréssion linéaire simple, multiple et polynomiale.ipynb  Copie de DecisionTrees.ipynb  Copie de KNN classification.ipynb  Copie de Linear Regression.ipynb  Copie de Quete Titanic re.ipynb  prediction_pokemon.ipynb  predictoin_prix_maiso.ipynb  submission.csv
nlp/: analysis_sentiment.ipynb  (+5 more)
projet_etude/FROODIES/: README.md  app.py  clustering.py  clustering_streamlit.py  creation_donnees.py  froodies_app.py  hello.py  paris_restaurants_5000.csv  paris_restaurants_enrichi.csv  pyproject.toml  sample_restaurants.json  user_data.json
(+65 files in other folders)
