[tool.poetry]
name = "froodies"
version = "0.1.0"
description = ""
authors = ["soleneD05 <solene.degrutere@orange.fr>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
faker = "^37.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
